<resources>
    <string name="app_name">Financial Advisor App</string>

    <string name="button_subtract_from_budget">Subtract from Budget</string>
    <string name="button_add_to_budget">Add to Budget</string>
    <string name="button_budget_summary">Budget Summary</string>

    <string name="label_upcoming_bills">Upcoming Bills</string>
    <string name="label_current_budget">Current Budget</string>
    <string name="label_financial_health">Financial Health</string>

    <string-array name="upcoming_bills_spinner">
        <item>Sample Bill 1</item>
        <item>Sample Bill 2</item>
        <item>Sample Bill 3</item>
    </string-array>
</resources>
